// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom provider 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp_1.1.0_amd64.deb",
          },
        ],
        "path": "TestApp_1.1.0_amd64.deb",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`custom provider 2`] = `
Array [
  "/",
  "/opt/",
  "/usr/",
  "/opt/Test App ßW/",
  "/opt/Test App ßW/chrome-sandbox",
  "/opt/Test App ßW/chrome_100_percent.pak",
  "/opt/Test App ßW/chrome_200_percent.pak",
  "/opt/Test App ßW/icudtl.dat",
  "/opt/Test App ßW/libEGL.so",
  "/opt/Test App ßW/libffmpeg.so",
  "/opt/Test App ßW/libGLESv2.so",
  "/opt/Test App ßW/libvk_swiftshader.so",
  "/opt/Test App ßW/libvulkan.so",
  "/opt/Test App ßW/LICENSE.electron.txt",
  "/opt/Test App ßW/LICENSES.chromium.html",
  "/opt/Test App ßW/resources.pak",
  "/opt/Test App ßW/snapshot_blob.bin",
  "/opt/Test App ßW/testapp",
  "/opt/Test App ßW/v8_context_snapshot.bin",
  "/opt/Test App ßW/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/Test App ßW/resources/",
  "/opt/Test App ßW/resources/app-update.yml",
  "/opt/Test App ßW/resources/app.asar",
  "/opt/Test App ßW/resources/package-type",
  "/opt/Test App ßW/swiftshader/",
  "/opt/Test App ßW/swiftshader/libEGL.so",
  "/opt/Test App ßW/swiftshader/libGLESv2.so",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`custom provider 3`] = `
Object {
  "Architecture": "amd64",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "devel",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`custom provider 4`] = `"Test Application (test quite “ #378)"`;

exports[`dotted s3 bucket 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
}
`;

exports[`generic, github and spaces 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "alpha-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "alpha-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "beta-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "beta-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "TestApp-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`generic, github and spaces 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`github and spaces (publishAutoUpdate) 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-x86_64.AppImage",
          },
        ],
        "path": "TestApp-1.1.0-x86_64.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`mac artifactName  1`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW_1.1.0_mac.zip",
          },
        ],
        "path": "Test App ßW_1.1.0_mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW_1.1.0_mac.zip",
          },
        ],
        "path": "Test App ßW_1.1.0_mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW_1.1.0_mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW_1.1.0_mac.zip.blockmap",
      "safeArtifactName": "Test App ßW_1.1.0_mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`mac artifactName  2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`os macro 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`os macro 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`os macro 3`] = `
Array [
  "latest/mac/Test App ßW-1.1.0-mac.zip",
  "latest/mac/Test App ßW-1.1.0-mac.zip.blockmap",
  "latest/mac/latest-mac.yml",
  "latest/linux/TestApp-1.1.0.zip",
]
`;
